--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "express": "^4.18.2",
     "fa-icons": "^0.2.0",
     "jquery": "^3.7.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.5.1",
     "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "toastr": "^2.1.4"
   }
 }
