--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fa-icons": "^0.2.0",
     "jquery": "^3.7.0",
     "morgan": "^1.10.0",
