--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.17.3",
     "fa-icons": "^0.2.0",
     "jquery": "^3.7.0",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.5.1",
     "nodemon": "^3.0.1",
