--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
@@ -32,6 +33,8 @@
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.5.1",
+    "nodemailer": "^6.9.4",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "toastr": "^2.1.4"
